--- a/14/index.html
+++ b/14/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-<a href="www.desafiolatam.com">link a Desafío Latam!</a>
+    <a href="https://www.desafiolatam.com">
+	<img src="../images/logo.png">
+    </a>
 
 </body>
 </html>
