--- a/16/index.html
+++ b/16/index.html
@@ -7,8 +7,9 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<img src="images/logo.png">
-   	<a href="http://www.google.cl"> hola </a>
-	</img>
+    <a href="http://www.google.cl"> 
+	    <img src="../images/logo.png">
+   	</a>
+
 </body>
 </html>
