--- a/20/index.html
+++ b/20/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <head> Go Green </head>
+    <title>Go Green</title>
 </head>
+<style type="text/css">
+	p{
+        color: green
+	}
+</style>
 <body>
     <p> Hellowww </p>
     <p> Además recuerda siempre agregar la codificación </p>
