--- a/24/index.html
+++ b/24/index.html
@@ -3,14 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<style>
-		p {
-			color: red;
+		div{
+			background: yellow;
 		}
+		
 	</style>
 </head>
 <body>
 	<div>
-		<p> Hellowww </p>
+		<p style="color: pink"> Hellowww </p>
 	</div>
 
 	<div>
@@ -21,6 +22,6 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		<p> Goooooood byeeeee !! </p>
-	</div>
+	</div>	
 </body>
 </html>
